<resources>
    <string name="app_name">MyJournal</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="fetching_data_from_server">Fetching data from server</string>
    <string name="no_mjournal_yet_create_one_to_get_started">No mJournal yet. create one to get started</string>
    <string name="failed_to_connect_to_server_ncheck_internet_connection">Failed to connect to server. Check internet connection</string>
    <string name="no_saved_journal">no saved journal</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit">Edit</string>

</resources>
